2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:
	* tests/check/elements/gdkpixbufsink.c:
	  Add unit test for gdkpixbufsink element.

2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gdk_pixbuf/Makefile.am:
	* ext/gdk_pixbuf/gstgdkpixbuf.c: (plugin_init):
	* ext/gdk_pixbuf/gstgdkpixbufsink.c:
	  (gst_gdk_pixbuf_sink_base_init),
	  (gst_gdk_pixbuf_sink_class_init), (gst_gdk_pixbuf_sink_init),
	  (gst_gdk_pixbuf_sink_start), (gst_gdk_pixbuf_sink_stop),
	  (gst_gdk_pixbuf_sink_set_caps),
	  (gst_gdk_pixbuf_sink_pixbuf_destroy_notify),
	  (gst_gdk_pixbuf_sink_get_pixbuf_from_buffer),
	  (gst_gdk_pixbuf_sink_handle_buffer), (gst_gdk_pixbuf_sink_preroll),
	  (gst_gdk_pixbuf_sink_render), (gst_gdk_pixbuf_sink_set_property),
	  (gst_gdk_pixbuf_sink_get_property):
	* ext/gdk_pixbuf/gstgdkpixbufsink.h:
	  Add gdkpixbufsink element for easy snapshotting (#525946).

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/pipelines/wavpack.c: (wavpack_suite):
	Bump timeout from 3 to 60 seconds.

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/pipelines/.cvignore:
	Remove useless file.

	* tests/check/pipelines/.cvsignore:
	Add new test to .cvsignore.

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	* tests/check/pipelines/wavpack.c: (bus_handler),
	(identity_handoff), (fakesink_handoff), (GST_START_TEST),
	(wavpack_suite), (main):
	Add unit test that encodes and decodes some data, checks that it
	is still the same and that all timestamps/offsets are perfect.

2008-04-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_base_init):
	* ext/wavpack/gstwavpackenc.c: (gst_wavpack_enc_base_init):
	* ext/wavpack/gstwavpackparse.c:
	(gst_wavpack_parse_index_entry_new),
	(gst_wavpack_parse_index_entry_free),
	(gst_wavpack_parse_base_init),